Bug #239349 --> Filters incorrectly mark mails as junk if you have a filter that sets a label on the message.

sr=bienvenu
a=chofmann